--- a/PW2/1°bim/aula2/Formulario/Gworks/cliente.css
+++ b/PW2/1°bim/aula2/Formulario/Gworks/cliente.css
@@ -1,86 +1,75 @@
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    height: 75vh;
-    width: auto;
-    background-color: #f1f5f9;
-}
+<!DOCTYPE html>
+<html lang="pt-br">
 
-#container{
-    margin-top: 100px;
-    margin-bottom: 115px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 65%;
-    background-color: firebrick;
-    color: #f1f5f9;
-    font-weight: 10px;
-    line-height: 1.6;
-    word-spacing: 1.4px;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    border: solid 10px #0f172a;
-    border-radius: 12px;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cliente</title>
+    <link  rel="stylesheet" href="style.css">
+</head>
 
-.nome{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 15px;
-    background-color: firebrick;
-    color: #f1f5f9;
-}
+<body>
 
-.estCivil{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f1f5f9;
-    margin-top: 17px;
-    margin-bottom: 17px;
-}
+    <?php include('navbar.php') ?>
 
-.gender{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f1f5f9;    
-    margin-top: 17px;
-    margin-bottom: 17px;
-}
 
-.dataNasci{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f1f5f9;
-    margin-top: 17px;
-    margin-bottom: 17px;
-}
+    <section id="container"> <!--começo seção formulário -->
+        <form action="dados.php" method="post"> <!-- começo formulário -->
+            <h1>Formulário</h1>
+            <div class="nome">
+               <label>Nome</label>
+                <input type="text" name="txNome" />
+            </div>
 
-.email{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f1f5f9;
-    margin-top: 17px;
-    margin-bottom: 17px;
-}
+            <div class="estCivil">
+                <label>Estado Civil</label>
+                <select name="txCivil">
+                    <option value="solteiro">Solteiro</option>
+                    <option value="casado">Casado</option>
+                    <option value="separado">Separado</option>
+                    <option value="divorciado">Divorciado</option>
+                    <option value="viuvo">Viúvo</option>
+                </select>
+            </div>
 
-.cpf{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f1f5f9;
-    margin-top: 17px;
-    margin-bottom: 17px;
-}
+            <div class="gender">
+                <label>Gênero</label>
+                <select name="txGenero">
+                    <option value="masculino">Masculino</option>
+                    <option value="feminino">Feminino</option>
+                    <option value="naobinario">Não-Binário</option>
+                </select>
+            </div>
 
-.estado{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f1f5f9;
-    margin-top: 17px;
-    margin-bottom: 17px;
-}
-.envio {
-    margin-top: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /*background-color: #0f172a !important;
-    border-color: #f1f5f9;
-    color: #0f172a !important;
-    transition: 0.3 ease-in-out;*/
-    margin-bottom: 30px;
-}
+            <div class="dataNasci">
+                <label>Data de Nascimento</label>
+                <input type="date" name="txNas" />
+            </div>
+
+            <div class="email">
+                <label>E-mail</label>
+                <input type="email" name="txEmail" />
+            </div>
+
+            <div class="cpf">
+                <label>CPF</label>
+                <input type="number" name="txCpf" minlength="11" maxlength="11" required/>
+            </div>
+
+            <div class="estado">
+                <label>Estado</label>
+                <input type="text" name="txEstado"/>
+            </div>
+
+            <div class="envio">
+                <input type="submit" value="Enviar"/>
+            </div>
+
+        </form>
+    </section>
+
+
+    <?php include('footer.php') ?>
+</body>
+
+</html>
